syntax = "proto3";

package container.v2;

option go_package = "github.com/nspcc-dev/neofs-api-go/container/v2";
option csharp_namespace = "NeoFS.API.Container";

import "netmap/v2/types.proto";
import "refs/v2/types.proto";

// Container is a structure that defines object placement behaviour. Objects
// can be stored only within containers. They define placement rule, attributes
// and access control information. ID of the container is a 32 byte long
// SHA256 hash of stable-marshalled container message.
message Container {
  // OwnerID carries identifier of the container owner.
  refs.v2.OwnerID owner_id = 1;

  // Nonce is a 16 byte UUID, used to avoid collisions of container id.
  bytes nonce = 2;

  // BasicACL contains access control rules for owner, system, others groups and
  // permission bits for bearer token and Extended ACL.
  uint32 basic_acl = 3;

  // Attribute is a key-value pair of strings.
  message Attribute {
    // Key of immutable container attribute.
    string key = 1;

    // Value of immutable container attribute.
    string value = 2;
  }

  // Attributes define any immutable characteristics of container.v2.
  repeated Attribute attributes = 4;

  // Rules define storage policy for the object inside the container.v2.
  netmap.v2.PlacementRule rules = 5;
}
